2007-03-23  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/elf.exp: Add "--local-store 0:0" to LDFLAGS for spu.

2003-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4210
	* ld-pe/image_size.d: New file.
	* ld-pe/image_size.s: Likewise.
	* ld-pe/image_size.t: Likewise.

	* ld-pe/pe.exp: Run image_size.

2007-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4007
	* ld-elf/note-1.d: New file.
	* ld-elf/note-1.s: Likewise.
	* ld-elf/note-1.t: Likewise.
	* ld-i386/alloc.d: Likewise.
	* ld-i386/alloc.s: Likewise.
	* ld-i386/alloc.t: Likewise.

	* ld-i386/i386.exp: Run "alloc".

2007-03-20  Paul Brook  <paul@codesourcery.com>

	* ld-arm/arm-elf.exp (ld-arm/arm-elf.exp): Add arm-pic-veneer.
	* ld-arm/arm-pic-veneer.d: New test.
	* ld-arm/arm-pic-veneer.s: New test.

2007-03-08  Richard Sandiford  <richard@codesourcery.com>

	* ld-elf/extract-symbol-1.ld (data): Explicitly set the start address
	to 0.

2007-03-07  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/extract-symbol-1sec.d: xfail hppa.
	* ld-elf/extract-symbol-1sym.d: xfail hppa.

2007-03-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR 3958
	* ld-elf/linkonce1.d: New.
	* ld-elf/linkonce1a.s: New.
	* ld-elf/linkonce1b.s: New.
	* ld-elf/linkonce2.d: New.
	* ld-i386/pcrel16abs.d: New.
	* ld-i386/pcrel16abs.s: New.
	* ld-i386/i386.exp: Run it.

2007-03-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4144
	* ld-elf/nobits-1.d: New file.
	* ld-elf/nobits-1.s: Likewise.
	* ld-elf/nobits-1.t: Likewise.

2007-03-02  Richard Sandiford  <richard@codesourcery.com>

	* ld-elf/binutils.exp: Revert last change.

2007-03-01  Richard Sandiford  <richard@codesourcery.com>

	* ld-elf/extract-symbol-1sym.d, ld-elf/extract-symbol-1sec.d,
	* ld-elf/extract-symbol-1.s, ld-elf/extract-symbol-1.ld: New tests.
	* ld-elf/binutils.exp: Run them.

2007-02-28  Nick Clifton  <nickc@redhat.com>

	PR ld/3796
	* ld-arm/arm-elf.exp (armelftests): Move "Thumb-2 BL" test into...
	(armeabitests): ... here, a new array for EABI specific tests.