@@ -1,3 +1,8 @@
+2007-03-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
+
+	* ld-sh/ld-r-1.d: Update.
+	* ld-sh/shared-1.d: Likewise.
+
 2007-03-23  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-elf/elf.exp: Add "--local-store 0:0" to LDFLAGS for spu.
